# lavanya

./: README.md  pyproject.toml  requirements.txt
lavanya/: __init__.py  app.py
lavanya/templates/: index.html  uploaded.html
tests/: test_lavanya.py
